depends_compile_tests/tests/fail/derive/graph/bad_attrs.stderr
error: Provide a graph definition in the #[depends(..)] attribute.
 --> tests/fail/derive/graph/bad_attrs.rs:5:10
  |
5 | #[derive(Graph)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Graph` (in Nightly builds, run with -Z macro-backtrace for more info)

error: More than one #[depends(..)] attribute present.
 --> tests/fail/derive/graph/bad_attrs.rs:8:10
  |
8 | #[derive(Graph)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Graph` (in Nightly builds, run with -Z macro-backtrace for more info)
